# nutri-mcp

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  seed.py  server.py  supergateway.config.json
app/: main.py
app/core/: config.py  database.py
app/mcp/: prompts.py  resources.py  tools.py
app/middleware/: auth.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: analytics_service.py  appointment_service.py  nutrition_service.py
app/utils/: banner.py
docs/: index.md
docs/api/: authentication.md  endpoints.md  prompts.md  resources.md  tools.md
tests/: conftest.py  test_analytics.py  test_auth.py  test_schemas.py  test_services.py
