[project]
name = "mcp-case-study-practice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "art>=6.5",
    "colorama>=0.4.6",
    "fastmcp",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]",
    "sqlalchemy>=2.0.47",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
